--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: cycodelabs/cimon-action@v0  # 👈 Add Cimon first
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -19,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: cycodelabs/cimon-action@v0  # 👈 Add Cimon first
       - name: Test Step
         run: echo "Tests executed."
 
@@ -26,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      - uses: cycodelabs/cimon-action@v0  # 👈 Add Cimon first
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -38,5 +41,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: sast
     steps:
+      - uses: cycodelabs/cimon-action@v0  # 👈 Add Cimon first
       - name: Deploy Step
         run: echo "Deployed to production (simulated)"
